# OpenPREY

./: .gitignore  AGENTS.md  BUILDING.md  README.md  TECHNICAL.md  TODO.md  meson.build  meson_options.txt
.github/workflows/: nightly-builds.yml  purge-history-src-paths.yml
.install/openprey/: fta_probe_afterpatch.cfg  leechtest.cfg  mirror_capture.cfg  repro_auto_feeding.cfg  repro_auto_roadhouse.cfg  repro_energynode_biolabsa_args.cfg  repro_energynode_biolabsa_post.cfg  repro_energynode_leechprobe.cfg  repro_energynode_probe.cfg  repro_energynode_trace_script.cfg  repro_entitylist_biolabsa.cfg  repro_entitylist_salvage.cfg  repro_feeding_fullcheck.cfg  repro_feedingb_aas_warn_off.cfg  repro_feedingb_aas_warn_on.cfg  repro_feedingb_default_after_fix.cfg  repro_getbinds_biolabsa.cfg  repro_getbinds_salvage.cfg  repro_lotaa_fullcheck.cfg  repro_mapprobe.cfg  repro_reflect_long.cfg  repro_roadhouse_entitycull_compare.cfg  repro_roadhouse_entitydefs.cfg  repro_roadhouse_entitydefs_now.cfg  repro_roadhouse_forceambient.cfg  repro_roadhouse_frame_scan.cfg  repro_roadhouse_fullcheck.cfg  repro_roadhouse_material_dump.cfg  repro_roadhouse_mirror_dense.cfg  repro_roadhouse_mirror_scan.cfg  repro_roadhouse_mirrordbg.cfg  repro_roadhouse_passprobe.cfg  repro_roadhouse_player_singleentity.cfg  repro_roadhouse_regresscheck.cfg  repro_roadhouse_scissor_probe.cfg  repro_roadhouse_shadows0.cfg  repro_roadhouse_showtris.cfg  repro_roadhouse_single42.cfg  repro_roadhouse_single42_main.cfg  repro_roadhouse_skipSuppress_compare.cfg  (+11 more)
.install/openprey/glprogs/: openprey_bloom.fs
.install/openprey/guis/: restart.gui
.install/share/applications/: openprey.desktop
assets/linux/: openprey.desktop.in
docs-dev/: input-key-matrix.md  official-pk4-checksums.md  platform-support.md  porting-baseline.md  prey-gamelibs-compatibility-plan.md  quake4-bse-research-and-implementation-plan.md  quake4-light-entity-parity.md  release-completion.md
docs-dev/legacy/: README.md
docs-dev/proposals/: rbdoom3-bfg-parity-modernization-plan.md
docs-user/: display-settings.md
openbase/: meson.build
openprey/: meson.build
openprey/guis/: hud.gui  mainmenu.gui  subtitles.gui
openprey/guis/mainmenu/: mainmenu_options.guifragment
openprey/strings/: english999.lang  french999.lang  italian999.lang  spanish999.lang
src/MayaImport/: maya_main.h
src/Prey/: ai_creaturex.cpp  ai_droid.cpp  ai_droid.h  force_converge.cpp  force_converge.h  game_arcadegame.cpp  game_arcadegame.h  game_cards.cpp  game_cards.h  game_console.cpp  game_deathwraith.cpp  game_deathwraith.h  game_debrisspawner.cpp  game_entityfx.h  game_entityspawner.cpp  game_gun.cpp  game_gun.h  game_handcontrol.cpp  game_handcontrol.h  game_inventory.cpp  game_monster_ai.cpp  game_monster_ai.h  game_monster_ai_events.cpp  game_mover.cpp  game_player.cpp  game_player.h  game_portal.cpp  game_renderentity.cpp  game_securityeye.cpp  game_shuttle.cpp  game_shuttle.h  game_slots.h  game_targets.cpp  game_trigger.cpp  game_trigger.h  game_utils.cpp  game_utils.h  game_vehicle.cpp  game_vehicle.h  prey_baseweapons.cpp  (+18 more)
src/aas/: AASFile.cpp  AASFile_sample.cpp
src/bse_api/: BSE_API.h
src/cm/: CollisionModel.h  CollisionModel_contacts.cpp  CollisionModel_contents.cpp  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h  CollisionModel_rotate.cpp  CollisionModel_translate.cpp
src/framework/: BuildVersion.h  Common.cpp  Common.h  Console.cpp  DeclAF.cpp  DeclEntityDef.cpp  DeclFX.cpp  DeclFX.h  DeclManager.cpp  DeclParticle.cpp  DeclParticle.h  DeclPreyBeam.cpp  DeclSkin.cpp  File.cpp  FileSystem.cpp  FileSystem.h  Session.cpp  Session.h  Session_local.h  Session_menu.cpp  UsercmdGen.cpp  UsercmdGen.h  declAF.h  declManager.h  declSkin.h  licensee.h
src/framework/async/: AsyncClient.cpp  AsyncClient.h  AsyncNetwork.cpp  AsyncServer.cpp
src/game/: Actor.cpp  Camera.cpp  Entity.cpp  Entity.h  EntityAdditions.cpp  Fx.h  Game_local.cpp  Game_local.h  Item.cpp  Item.h  Misc.cpp  Mover.cpp  Mover.h  MultiplayerGame.cpp  Player.cpp  Pvs.cpp  Trigger.cpp  Trigger.h
src/game/ai/: AAS_NearPoint.cpp  AAS_local.h  AI.cpp  AI_events.cpp  AI_pathing.cpp
src/game/anim/: Anim.h  Anim_Blend.cpp
src/game/gamesys/: Callbacks.cpp  Class.cpp  Class.h  Event.cpp  Event.h  SysCmds.cpp  SysCvar.cpp  TypeInfo.cpp
src/game/physics/: Clip.cpp  Clip.h  Physics_PreyPlayer.h  Physics_RigidBody.cpp
src/game/script/: Script_Compiler.cpp  Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.cpp  Script_Program.h  Script_Thread.cpp
src/idlib/: BitMsg.h  CmdArgs.cpp  Heap.cpp  Heap.h  Lib.cpp  Lib.h  Str.cpp  Str.h  mapfile.cpp  precompiled.h
src/idlib/containers/: List.h  PreyStack.h  StaticList.h
src/idlib/hashing/: MD5.cpp
src/idlib/math/: Math.h  Simd.cpp  Vector.cpp  Vector.h
src/renderer/: BinaryImage.cpp  GuiModel.cpp  Image.h  ImageManager.cpp  Image_files.cpp  Image_intrinsic.cpp  Image_load.cpp  Interaction.cpp  Material.cpp  Material.h  Model.h  ModelDecal.cpp  ModelManager.cpp  ModelManager.h  Model_hhBeam.cpp  Model_local.h  Model_lwo.cpp  RenderEntity.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderTexture.h  RenderWorld.cpp  RenderWorld.h  RenderWorld_load.cpp  RenderWorld_local.h  RenderWorld_portals.cpp  draw_arb2.cpp  draw_common.cpp  qgl.h  tr_backend.cpp  tr_guisurf.cpp  tr_light.cpp  tr_local.h  tr_main.cpp  tr_subview.cpp
src/renderer/OpenGL/: gl_Image.cpp  gl_RenderTexture.cpp
src/renderer/jpeg-6/: jerror.c
src/sound/: SoundVoice.cpp  SoundVoice.h  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_world.cpp  sound.h
src/sound/OpenAL/: AL_SoundHardware.cpp  AL_SoundHardware.h  (+2 more)
src/sys/: sys_local.cpp  sys_local.h  sys_public.h
src/ui/: ChoiceWindow.cpp  DeviceContext.cpp  EditWindow.cpp  GuiScript.cpp  ListGUI.h  ListWindow.h  SimpleWindow.cpp  SliderWindow.cpp  UserInterface.cpp  UserInterface.h  UserInterfaceLocal.h  Window.cpp  Window.h
subprojects/openal-soft-prebuilt/: meson.build
tools/assets/: extract_menu_background_tiles.ps1
(+27 files in other folders)
