option(
  'use_pch',
  type: 'boolean',
  value: true,
  description: 'Enable precompiled headers (src/idlib/precompiled.h).',
)

option(
  'build_engine',
  type: 'boolean',
  value: true,
  description: 'Build engine executables (OpenPrey-client_<arch>/OpenPrey-ded_<arch>).',
)

option(
  'build_games',
  type: 'boolean',
  value: true,
  description: 'Build the unified game module from the synchronized game source mirror.',
)

option(
  'build_game_sp',
  type: 'boolean',
  value: false,
  description: 'Legacy no-op compatibility option. Unified game module builds when -Dbuild_games=true.',
)

option(
  'build_game_mp',
  type: 'boolean',
  value: false,
  description: 'Legacy no-op compatibility option. Unified game module builds when -Dbuild_games=true.',
)

option(
  'platform_backend',
  type: 'combo',
  choices: ['sdl3', 'legacy_win32', 'native'],
  value: 'sdl3',
  description: 'Window/input backend on Windows (SDL3 is the portability default; legacy_win32 is transitional). Non-Windows hosts always use native platform sources.',
)

option(
  'enforce_msvc_2026',
  type: 'boolean',
  value: false,
  description: 'Fail configure when MSVC is older than the VS 2026 baseline (19.46+).',
)
